policies/infra/kubernetes/examples/internal-admin-gateway/internal-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: internal-admin-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: http-internal
        protocol: HTTP
      hosts:
        - "internal-admin.fin-sre.local"
