policies/infra/kubernetes/examples/internal-admin-gateway/internal-admin-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: internal-admin-api
spec:
  hosts:
    - internal-admin.fin-sre.local
  gateways:
    - internal-admin-gateway
  http:
    - match:
        - uri:
            prefix: /internal/admin/
      route:
        - destination:
            host: agent-server
            port:
              number: 8080
